@@ -24,6 +24,8 @@ Unreleased
 - Various documentation corrections #484, #482, #487, #534
 - Fix `from flask_login import *` behavior, although note that
  `import *` is not usually a good pattern in code. #485
+- `UserMixin.is_authenticated` will return whatever `is_active` returns
+  by default. This prevents inactive users from logging in. #486, #530
 
 Version 0.5.0
 -------------
